--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,14 +15,15 @@
     "clsx": "^2.0.0",
     "tailwind-merge": "^1.14.0"
   },
-  "devDependencies": {
-    "@types/react": "^18.2.15",
-    "@types/react-dom": "^18.2.7",
-    "@vitejs/plugin-react": "^4.0.3",
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.27",
-    "tailwindcss": "^3.3.3",
-    "typescript": "^5.0.2",
-    "vite": "^4.4.5"
+"devDependencies": {
+  "@types/node": "^20.0.0",
+  "@types/react": "^18.2.15",
+  "@types/react-dom": "^18.2.7",
+  "@vitejs/plugin-react": "^4.0.3",
+  "autoprefixer": "^10.4.14",
+  "postcss": "^8.4.27",
+  "tailwindcss": "^3.3.3",
+  "typescript": "^5.0.2",
+  "vite": "^4.4.5"
   }
 }
