--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,29 +1,29 @@
 {
-  "name": "picomessenger-web",
+  "name": "picomessenger",
   "private": true,
-  "version": "1.0.0",
+  "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "lucide-react": "^0.344.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "uuid": "^9.0.1",
-    "firebase": "^10.8.0",
-    "react-reader": "^2.0.11",
-    "react-confetti": "^6.1.0"
+    "react-dom": "^19.2.4",
+    "lucide-react": "^0.564.0",
+    "vite": "^7.3.1",
+    "react": "^19.2.4",
+    "@vitejs/plugin-react": "^5.1.4",
+    "express": "^5.2.1",
+    "firebase-admin": "^13.6.1",
+    "firebase-functions": "^7.0.5",
+    "crypto": "^1.0.1",
+    "cors": "^2.8.6"
   },
   "devDependencies": {
-    "@types/react": "^18.2.64",
-    "@types/react-dom": "^18.2.21",
-    "@types/uuid": "^9.0.8",
-    "@vitejs/plugin-react": "^4.2.1",
-    "typescript": "^5.2.2",
-    "vite": "^5.1.6",
-    "vite-plugin-pwa": "^0.19.0"
+    "@types/node": "^22.14.0",
+    "@vitejs/plugin-react": "^5.0.0",
+    "typescript": "~5.8.2",
+    "vite": "^6.2.0"
   }
 }
